Fix --guest scrollbar display

--- a/css/main_jcink.css
+++ b/css/main_jcink.css
@@ -12687,6 +12687,9 @@ body.light {
   ::-webkit-scrollbar-thumb {
     background:var(--main-accent);
   }
+  .user-groupid-2 ::-webkit-scrollbar-thumb {
+    background:var(--guest);
+  }
   ::-webkit-scrollbar-track {
     background:#333;
   }
